--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,6 +4,7 @@
 sonar.projectKey=distributed-kv
 sonar.projectName=Distributed KV Store with RAFT Consensus
 sonar.projectVersion=1.0.0
+sonar.organization=mokhatiri
 
 # Paths
 sonar.sources=.
