--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 # SonarQube Configuration for distributed-kv
 
 # Project identification
-sonar.projectKey=distributed-kv
+sonar.projectKey=mokhatiri_KVStore-raft-consensus
 sonar.projectName=Distributed KV Store with RAFT Consensus
 sonar.projectVersion=1.0.0
 sonar.organization=mokhatiri
@@ -26,6 +26,10 @@ sonar.issues.include.networkPath=true
 
 # Encoding
 sonar.sourceEncoding=UTF-8
+
+# Branch configuration
+sonar.branch.name=develop
+sonar.branch.target=master
 
 # C/C++ properties for sqlite3 if needed
 sonar.cfamily.build-wrapper-output=./bw-output
