disabling the quality gate wait

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -19,7 +19,7 @@ sonar.go.coverage.reportPaths=coverage.out
 sonar.language=go
 
 # Quality gate
-sonar.qualitygate.wait=true
+sonar.qualitygate.wait=false
 
 # Issues
 sonar.issues.include.networkPath=true
